--- a/doc_internal/Doxyfile.in
+++ b/doc_internal/Doxyfile.in
@@ -350,6 +350,8 @@ DIR_GRAPH_MAX_DEPTH    = 1
 DOT_IMAGE_FORMAT       = svg
 INTERACTIVE_SVG        = YES
 DOT_PATH               =
+DOT_DRY_RUN            = NO
+DOT_FORCE_REGENERATING = NO
 DOTFILE_DIRS           =
 DIA_PATH               =
 DIAFILE_DIRS           =
