--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,9 @@ if (use_libclang)
         find_package(LLVM CONFIG REQUIRED)
         find_package(Clang CONFIG REQUIRED)
 endif()
+if (use_sys_fmt)
+        find_package(fmt CONFIG REQUIRED)
+endif()
 if (use_sys_spdlog)
         find_package(spdlog CONFIG REQUIRED)
 endif()
