--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -175,7 +175,11 @@ jobs:
     - name: Install MikTeX (Windows)
       run: |
         choco install miktex --no-progress
-        echo "%ProgramFiles%\MiKTeX\miktex\bin\x64" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8
+        echo "C:\Program Files\MiKTeX\miktex\bin\x64" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8
+      if: matrix.config.os == 'windows-latest'
+
+    - name: Configure MikTeX (Windows)
+      run: |
         initexmf --admin --verbose --set-config-value=[MPM]AutoInstall=1
         miktex --admin --verbose packages update-package-database
         miktex --admin --verbose packages update
