--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -174,7 +174,7 @@ jobs:
 
     - name: Install MikTeX (Windows)
       run: |
-        choco install miktex --no-progress --params "/Set:complete"
+        choco install miktex --no-progress --params "/Set:basic"
         echo "C:\Program Files\MiKTeX\miktex\bin\x64" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8
       if: matrix.config.os == 'windows-latest'
 
@@ -184,8 +184,6 @@ jobs:
         miktex --admin --verbose packages update
         miktex --admin --verbose fndb refresh
         initexmf --admin --verbose --set-config-value=[MPM]AutoInstall=1
-        miktex --admin --verbose packages install miktex-collection-latexextra miktex-collection-babel-dutch miktex-collection-cjk
-        miktex --admin --verbose fndb refresh
         initexmf --admin --verbose --update-fndb
         initexmf --admin --verbose --mklinks --force
         updmap --admin
