try enabling windows documentation workflow (attempt 6)

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -173,9 +173,13 @@ jobs:
 #      if: matrix.config.os == 'windows-latest'
 
     - name: Install MikTeX (Windows)
-      run: |
-        choco install miktex --no-progress --params "/Set:basic"
-        echo "C:\Program Files\MiKTeX\miktex\bin\x64" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8
+      uses: nick-invision/retry@v3
+      with:
+        timeout_minutes: 10
+        max_attempts: 3
+        commnd: |
+          choco install miktex --no-progress --params "/Set:basic" -y
+          echo "C:\Program Files\MiKTeX\miktex\bin\x64" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8
       if: matrix.config.os == 'windows-latest'
 
     - name: Configure MikTeX (Windows)
