--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -166,7 +166,8 @@ jobs:
       with:
         timeout_minutes: 10
         max_attempts: 3
-        command: choco install miktex --no-progress --params "/Set:basic" -y && echo "C:\Program Files\MiKTeX\miktex\bin\x64" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8
+        run: |
+          choco install miktex --no-progress --params "/Set:basic" -y && echo "C:\Program Files\MiKTeX\miktex\bin\x64" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8
       if: matrix.config.os == 'windows-latest'
 
     - name: Configure MikTeX (Windows)
