--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -243,6 +243,7 @@ jobs:
 
     - name: Install Graphviz (MacOS)
       run: |
+        brew install svn || true
         if ! brew install graphviz; then
           # Workaround issue with unexpected symlinks: https://github.com/actions/runner-images/issues/6817
           for f in 2to3 idle3 pydoc3 python3 python3-config; do
