Minor Doxywizard improvements
- Expert selection buttons are now rendered using SVG images
- Color tuning dialog has dark and light images as example, and better
  rendering on high-res displays.
- Slightly improved rendering of inlines images in the LaTeX output.

--- a/addon/doxywizard/CMakeLists.txt
+++ b/addon/doxywizard/CMakeLists.txt
@@ -3,7 +3,7 @@ if (force_qt STREQUAL "Qt6" OR NOT force_qt)
   find_package(Qt6Core QUIET CONFIG)
   if (Qt6Core_FOUND)
     message(STATUS "Using Qt6")
-    find_package(Qt6 REQUIRED COMPONENTS Widgets Gui Xml)
+    find_package(Qt6 REQUIRED COMPONENTS Widgets Gui Xml Svg)
     macro(qt_wrap_cpp)
       qt6_wrap_cpp(${ARGN})
     endmacro()
@@ -21,7 +21,7 @@ if (force_qt STREQUAL "Qt5" OR NOT Qt6_FOUND)
   find_package(Qt5Core QUIET CONFIG)
   if (Qt5Core_FOUND)
     message(STATUS "Using Qt5")
-    find_package(Qt5 REQUIRED COMPONENTS Widgets Gui Xml)
+    find_package(Qt5 REQUIRED COMPONENTS Widgets Gui Xml Svg)
     macro(qt_wrap_cpp)
       qt5_wrap_cpp(${ARGN})
     endmacro()
