--- a/addon/doxysearch/CMakeLists.txt
+++ b/addon/doxysearch/CMakeLists.txt
@@ -1,8 +1,14 @@
-find_package(xapian REQUIRED)
+find_package(XAPIAN REQUIRED)
 find_package(ZLIB REQUIRED)
 
-if (WIN32)
-  set(WIN_EXTRA_LIBS uuid rpcrt4 ws2_32)
+if(WIN32)
+  set(EXTRA_LIBS uuid rpcrt4 ws2_32)
+elseif(static_libxapian)
+  set(EXTRA_LIBS uuid)
+  if(UUID_LIB)
+    add_library(uuid STATIC IMPORTED)
+    set_target_properties(uuid PROPERTIES IMPORTED_LOCATION "${UUID_LIB}")
+  endif()
 endif()
 
 include_directories(
@@ -17,9 +23,10 @@ add_executable(doxyindexer
 )
 
 target_link_libraries(doxyindexer
+	              PRIVATE
                       ${XAPIAN_LIBRARIES}
                       ${ZLIB_LIBRARIES}
-                      ${WIN_EXTRA_LIBS}
+                      ${EXTRA_LIBS}
                       ${COVERAGE_LINKER_FLAGS}
                       doxygen_version
 		      xml
@@ -31,10 +38,11 @@ add_executable(doxysearch.cgi
 )
 
 target_link_libraries(doxysearch.cgi
+	              PRIVATE
                       doxygen_version
                       ${XAPIAN_LIBRARIES}
                       ${ZLIB_LIBRARIES}
-                      ${WIN_EXTRA_LIBS}
+                      ${EXTRA_LIBS}
 )
 
 include(ApplyEditbin)
