issue #11833 min macosx target version should be 10.15

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,10 +87,11 @@ endif()
 if(use_sys_sqlite3)
   find_package(SQLite3 REQUIRED)
 endif()
-if(build_wizard)
-  if(CMAKE_SYSTEM MATCHES "Darwin")
-    set(MACOS_VERSION_MIN 11.0)
-  endif()
+if(build_search AND CMAKE_SYSTEM MATCHES "Darwin")
+  set(MACOS_VERSION_MIN 10.15)
+endif()
+if(build_wizard AND CMAKE_SYSTEM MATCHES "Darwin")
+  set(MACOS_VERSION_MIN 11.0)
 endif()
 
 # use C++17 standard for compiling (unless very new Clang is present)
