--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -298,6 +298,7 @@ add_library(doxymain STATIC
     qhp.cpp
     reflist.cpp
     regex.cpp
+    requirementstracker.cpp
     resourcemgr.cpp
     rtfdocvisitor.cpp
     rtfgen.cpp
