fix: correct typo in Doxyfile.in

--- a/doc_internal/Doxyfile.in
+++ b/doc_internal/Doxyfile.in
@@ -326,7 +326,7 @@ EXTERNAL_PAGES         = YES
 # Configuration options related to the requirements traceability
 #---------------------------------------------------------------------------
 REQUIREMENTS_FILES     =
-REQUIREMNETS_TAGFILES  =
+REQUIREMENTS_TAGFILES  =
 #---------------------------------------------------------------------------
 # Configuration options related to diagram generator tools
 #---------------------------------------------------------------------------
